# chimera

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
.github/workflows/: docker-publish.yml
lavalink/: application.yml  docker-compose.yml
src/: command.rs  config.rs  lavalink_events.rs  macros.rs  main.rs  prefix_parser.rs  state.rs
src/command/: ping.rs
src/command/music/: mod.rs  play.rs
src/command_handler/: context.rs  definition.rs  dispatcher.rs  mod.rs  response.rs
src/commands/: mod.rs  ping.rs
src/commands/music/: help.rs  jump.rs  lyrics.rs  mod.rs  now_playing.rs  play.rs  queue.rs  skip.rs  stop.rs  volume.rs
src/components/: mod.rs
src/components/buttons/: lyrics.rs  mod.rs  pause.rs  skip.rs
src/gateway/: mod.rs  process.rs  runner.rs  setup.rs
src/utils/: lyrics.rs  mod.rs
