[package]
name = "chimera"
version = "0.1.0"
edition = "2024"

[dependencies]
songbird = { version = "0.5.0", features = [
  "twilight",
  "gateway",
  "rustls"
], default-features = false }
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = "0.15.7"
anyhow = "1.0.98"
twilight-interactions = "0.16.2"
twilight-model = "0.16.0"
async-trait = "0.1.88"
dashmap = "6.1.0"
serde_json = "1.0.140"
chrono = "0.4.41"
twilight-cache-inmemory = "0.16.0"
twilight-mention = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
once_cell = "1.21.3"
humantime = "2.2.0"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }

[dependencies.lavalink-rs]
git = "https://github.com/vicky5124/lavalink-rs/"
features = ["songbird", "twilight"]
branch = "main"

[build-dependencies]
chrono = "0.4.41"
